Fixes too high opacity of the video

--- a/src/conferences/aics-nyc/sass/partials/_hero.sass
+++ b/src/conferences/aics-nyc/sass/partials/_hero.sass
@@ -196,7 +196,7 @@
 			left: -200px
 
 		video
-			opacity: 0.4
+			opacity: 0.2
 			position: absolute
 			left: 0
 			top: 0
